--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -32,7 +32,7 @@
     <br>
     <span>{{ post.authors }}</span> <!-- Authors -->
     <br>
-    <em>{{ post.conference }}</em> <!-- Conference -->
+    <em>{{ post.venue }}</em> <!-- Conference -->
     {% if post.arxiv %}
       <br>
       <a href="{{ post.arxiv }}" target="_blank">arXiv Link</a> <!-- ArXiv Link -->
