--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -49,7 +49,7 @@
     {% endif %}
     
     {% if post.citation and post.paperurl %}
-      <p>Joint work with {{ post.citation }} <a href="{{ post.paperurl }}"><u>{{ post.paperurl }}</u></a></p>
+      <p>With {{ post.citation }} <a href="{{ post.paperurl }}"><u>{{ post.paperurl }}</u></a></p>
     {% elsif post.citation %}
       <p> Joint work with {{ post.citation }} </p>
     {% elsif post.paperurl %}
